--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "==========================================================================\r ### New update, 10/09/21:\r I've added a new feature to the project so now you can close popups by cliking\r the Esc key / anywhere outside of the popup, and added form input validation. \r Have fun! :)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf dist && webpack --mode=production",
+    "dev": "webpack serve --mode=development"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,22 @@
     "url": "https://github.com/netahadar/web_project_4/issues"
   },
   "homepage": "https://github.com/netahadar/web_project_4#readme",
-  "dependencies": {}
+  "dependencies": {
+    "core-js": "^3.18.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "autoprefixer": "^10.3.7",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.3.0",
+    "cssnano": "^5.0.8",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.4.2",
+    "postcss-loader": "^6.1.1",
+    "webpack": "^5.58.0",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
+  }
 }
